--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,122 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.header {
+  background: url("../images/background_header.svg") no-repeat center;
+  background-size: cover;
+  background-color: #fff;
+  position: relative;
+  min-height: 720px;
+  max-height: 800px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 80px 40px;
+  box-sizing: border-box;
+  z-index: 1;
+}
+
+.header__nav {
+  margin-bottom: 0px;
+  font-weight: 500;
+}
+
+.header__title {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  max-width: 729px;
+  position: relative;
+  z-index: 1;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+}
+
+.header__span-accent {
+  display: block;
+  margin-top: 183px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-size: 60px;
+  line-height: 72px;
+  color: #3f96f3;
+}
+
+.header__description {
+  margin-top: 28px;
+  margin-bottom: 0px;
+  max-width: 683px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__image {
+  position: absolute;
+  width: 646px;
+  height: 568px;
+  top: 124px;
+  right: 5px;
+  z-index: -1;
+}
+
+.header__footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.header__paragraph-wrapper {
+  margin: 0px;
+  font-family: "Inter", Arial, sans-serif;
+}
+
+.header__paragraph {
+  display: block;
+  margin: 0px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #6f6f6f;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.nav__logo {
+  width: 105px;
+  height: 39px;
+  position: relative;
+  left: -50px;
+}
+
+.nav__links {
+  padding-left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  column-gap: 20px;
+  display: flex;
+  list-style-type: none;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #000;
+}
