--- a/pages/index.css
+++ b/pages/index.css
@@ -125,3 +125,69 @@
   text-decoration: none;
   color: #000;
 }
+
+.recipes {
+  background-color: #0a2750;
+  background-image: url("../images/background_recipes.svg") no-repeat center;
+  background-size: cover;
+  padding: 100px 80px;
+  color: #fff;
+}
+
+.recipes__title {
+  max-width: 580px;
+  margin: 0px;
+  margin-bottom: 24px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.recipes__subtitle {
+  margin: 0px;
+  margin-bottom: 80px;
+  max-width: 438px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.recipes__video {
+  margin-bottom: 115px;
+  margin-top: 80px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  column-gap: 40px;
+}
+
+.recipes__video-section {
+  list-style-type: none;
+}
+
+.recipes__iframe {
+  border: none;
+  width: 480px;
+  height: 273px;
+  margin-bottom: 24px;
+}
+
+.recipes__video-title-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.recipes__video-caption {
+  margin: 0px;
+  font-size: 20px;
+  line-height: 30px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+}
