fix background url

--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,9 @@
 }
 
 .header {
-  background: url("../images/background_header.svg") no-repeat center;
+  background: url("../images/background_header.svg");
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   background-color: #fff;
   position: relative;
@@ -128,7 +130,9 @@
 
 .recipes {
   background-color: #0a2750;
-  background-image: url("../images/background_recipes.svg") no-repeat center;
+  background-image: url("../images/background_recipes.svg");
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   padding: 100px 80px;
   color: #fff;
