--- a/pages/index.css
+++ b/pages/index.css
@@ -1,299 +1,7 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: Inter, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  background: url("../images/background_header.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-color: #fff;
-  position: relative;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding: 30px 80px 40px;
-  box-sizing: border-box;
-  z-index: 1;
-}
-
-.header__nav {
-  margin-bottom: 0px;
-  font-weight: 500;
-}
-
-.header__title {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  max-width: 729px;
-  position: relative;
-  z-index: 1;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-}
-
-.header__span-accent {
-  display: block;
-  margin-top: 183px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 60px;
-  line-height: 72px;
-  color: #3f96f3;
-}
-
-.header__description {
-  margin-top: 28px;
-  margin-bottom: 0px;
-  max-width: 683px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-  z-index: -1;
-}
-
-.header__footer {
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.header__paragraph-wrapper {
-  margin: 0px;
-  font-family: "Inter", Arial, sans-serif;
-}
-
-.header__paragraph {
-  display: block;
-  margin: 0px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  position: relative;
-  left: -50px;
-}
-
-.nav__links {
-  padding-left: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  column-gap: 20px;
-  display: flex;
-  list-style-type: none;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url("../images/background_recipes.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px 80px;
-  color: #fff;
-}
-
-.recipes__title {
-  max-width: 580px;
-  margin: 0px;
-  margin-bottom: 24px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  margin: 0px;
-  margin-bottom: 80px;
-  max-width: 438px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  margin-bottom: 115px;
-  margin-top: 80px;
-  padding: 0px;
-  display: flex;
-  justify-content: center;
-  column-gap: 40px;
-}
-
-.recipes__video-section {
-  list-style-type: none;
-}
-
-.recipes__iframe {
-  border: none;
-  width: 480px;
-  height: 273px;
-  margin-bottom: 24px;
-}
-
-.recipes__video-title-wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-
-.recipes__video-caption {
-  margin: 0px;
-  font-size: 20px;
-  line-height: 30px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation {
-  background: url("../images/background_reservation.svg") no-repeat center;
-  background-size: cover;
-  background-color: #d9e7ff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 0px 120px 0px;
-}
-
-.reservation__title {
-  margin-bottom: 80px;
-  margin-top: 0px;
-  display: block;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  text-align: center;
-}
-
-.form {
-  width: 100%;
-  max-width: 385px;
-}
-
-.form__fieldset {
-  border: none;
-  width: 100%;
-  padding: 0px;
-}
-
-.form__label {
-  display: block;
-  margin-bottom: 8px;
-  font-weight: 500;
-}
-
-.form__input {
-  border-radius: 4px;
-  display: block;
-  width: 100%;
-  margin-bottom: 32px;
-  height: 60px;
-  box-sizing: border-box;
-  padding: 0px 15px;
-  border: 1px solid #838383;
-}
-
-.form__input {
-  border-radius: 4px;
-  display: block;
-  width: 100%;
-  margin-bottom: 32px;
-  height: 60px;
-  box-sizing: border-box;
-  padding: 0px 15px;
-  border: 1px solid #838383;
-}
-
-.form__input::placeholder {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-}
-
-.form__button {
-  border-radius: 4px;
-  transition: opacity 0.3s ease-in-out;
-  height: 60px;
-  width: 100%;
-  margin-bottom: 32px;
-  font-weight: 500;
-  line-height: 20px;
-  background-color: #2f80ed;
-  color: white;
-  border: none;
-  padding: 0px;
-  cursor: pointer;
-}
-
-.form__button:hover {
-  opacity: 70%;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  height: 20px;
-  width: 20px;
-  margin-right: 12px;
-  accent-color: #2f80ed;
-  background-image: url("../images/check.svg");
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 0px;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
